--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,15 @@
         </div>
     </nav>
 
-    <main style=" height: 2rem;outline: 3px solid rgb(255, 0, 0); ">
+    <main style="padding: 0.5rem;outline: 3px solid rgb(255, 0, 0);">
+        <div id="chat-container">
+            hello world
+        </div>
+        <form id="chat-form">
+            <input id="messaggio-input" type="text" value="" placeholder="scrivi un messaggio">
+            <button id="btn-invia-messaggio">Invia messaggio</button>
+        </form>
+
 
     </main>
 
